k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: botmother-engine
  namespace: botmother-engine
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: botmother-engine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: botmother-engine
                port:
                  name: webhook
